# cpp_ffmpeg_audio_transcoding

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
